force-app/main/default/objects/Apttus__Document_Output_Format__c/Apttus__Document_Output_Format__c.object-meta.xml
<CustomObject>
    <description>Holds default output format preferences by user profile and agreement type for use in the agreement document generation process.</description>
    <label>Agreement Document Output Format</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Document Output Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>