force-app/main/default/objects/Apttus__Document_Output_Format__c/fields/Apttus__Allow_Override__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Allow_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user is allowed to override the default output format during the agreement document generation process.</description>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>