force-app/main/default/objects/Apttus__Document_Output_Format__c/fields/Apttus__AllowOverrideWatermark__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AllowOverrideWatermark__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the user is allowed to override the default watermark setting during the agreement document generation process.</description>
    <label>Allow Override (Watermark)</label>
    <type>Checkbox</type>
</CustomField>