force-app/main/default/objects/Apttus__Document_Output_Format__c/fields/Apttus__Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Output_Format__c</fullName>
    <description>The document output format (either PDF, RTF or DOC or DOCX)</description>
    <label>Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>RTF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>